bin/docker/k8s/countly-aggregator.yaml
apiVersion: v1
kind: Service
metadata:
  name: countly-aggregator
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: countly-aggregator
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countly-aggregator-deployment
spec:
  selector:
    matchLabels:
      app: countly-aggregator
  replicas: 1
  template:
    metadata:
      labels:
        app: countly-aggregator
    spec:
      containers:
      - name: countly-aggregator
        image: countly/api:23.03
#        image: gcr.io/countly-01/api:23.03     # Countly Enterprise
        imagePullPolicy: Always
        command: ["node"]
        args: ["--max-old-space-size=2048", "/opt/countly/api/aggregator.js"]
        ports:
        - containerPort: 3001
