bin/docker/k8s/countly-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: countly-api
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: countly-api
  type: NodePort
