bin/docker/k8s/countly-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: countly-api
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: countly-api
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countly-api-deployment
spec:
  selector:
    matchLabels:
      app: countly-api
  replicas: 2
  template:
    metadata:
      labels:
        app: countly-api
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - countly-api
                - mongo           # in case you don't use replica set, give your mongodb pod label app=mongo to ensure it's not on the same node with API
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: countly-api
        image: countly/api:23.03
#        image: gcr.io/countly-01/api:23.03     # Countly Enterprise
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /o/ping
            port: 3001
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 30
