bin/docker/k8s/countly-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: countly-frontend
spec:
  ports:
  - port: 6001
    protocol: TCP
    targetPort: 6001
  selector:
    app: countly-frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countly-frontend-deployment
spec:
  selector:
    matchLabels:
      app: countly-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: countly-frontend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - mongo
                - mongodb-replicaset
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: countly-frontend
        image: countly/frontend:23.03
#        image: gcr.io/countly-01/frontend:23.03     # Countly Enterprise
        imagePullPolicy: Always
        ports:
        - containerPort: 6001
        readinessProbe:
          httpGet:
            path: /ping
            port: 6001
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 30
