bin/docker/k8s/countly-ingress-baremetal_setup.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: countly-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - YOUR_HOSTNAME         # countly.example.com
    secretName: countly-tls
  rules:
  - http:
      paths:
      - backend:
          serviceName: countly-api
          servicePort: 3001
        path: /(i.*)
      - backend:
          serviceName: countly-api
          servicePort: 3001
        path: /(i/.*)
      - backend:
          serviceName: countly-api
          servicePort: 3001
        path: /(o.*)
      - backend:
          serviceName: countly-api
          servicePort: 3001
        path: /(o/.*)
      - backend:
          serviceName: countly-frontend
          servicePort: 6001
        path: /(.*)
      - backend:
          serviceName: countly-frontend
          servicePort: 6001
        path: /(images/.*)
