bin/docker/k8s/countly-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: countly-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /i
        backend:
          serviceName: countly-api
          servicePort: 3001
      - path: /i/*
        backend:
          serviceName: countly-api
          servicePort: 3001
      - path: /o
        backend:
          serviceName: countly-api
          servicePort: 3001
      - path: /o/*
        backend:
          serviceName: countly-api
          servicePort: 3001
      - path: /*
        backend:
          serviceName: countly-frontend
          servicePort: 6001
